# gridalert

./: Dockerfile  README.md  Singularity  setup.cfg
container/: Dockerfile  Singularity
gridalert/: __init__.py  __main__.py  anomaly_alert.py  config.py  const.py  data_converter.py  data_visualizer.py  default.conf  elastic_helper.py  gridalert.py  html_helper.py  label_helper.py  plot_helper.py  scan_helper.py  scdv_helper.py  sqlite3_helper.py  sts_similarity.py  text_vectorizer.py  vector_cluster.py
gridalert/algorithm/: __init__.py  base_cluster.py  base_vector.py  dbscan_cluster.py  doc2vec_vector.py  fasttext_vector.py  isolationforest_cluster.py  scdv_vector.py
gridalert/template/: __init__.py  elastic_template.py  logwatch_template.py  logwatchfine_template.py  messages_template.py  sts_template.py
gridalert/util/: date.py  hash.py  html.py  match.py  path.py  reader.py  text.py
logwatch/conf/logfiles/: dmlite.conf
logwatch/conf/services/: dmlite.conf
logwatch/scripts/services/: dmlite
