[metadata]
name = gridalert
version = 1.0.0
license = file: LICENSE

[options]
install_requires =
    tqdm
    smart-open==1.8.3
    gensim
    scikit-learn
    matplotlib
    paramiko
    cherrypy
    urllib3==1.24.3
    pydotplus

[options.entry_points]
console_scripts =
    gridalert = gridalert.__main__:main
